--- a/assets/sass/settings.scss
+++ b/assets/sass/settings.scss
@@ -22,12 +22,12 @@ $color-font: #252943;
 
 @font-face {
     font-family: 'Roboto';
-    src: url(../fonts/Roboto-Regular.ttf);
+    src: url(./fonts/Roboto-Regular.ttf);
 }
 
 @font-face {
     font-family: 'Roboto bold';
-    src: url(../fonts/Roboto-Bold.ttf);
+    src: url(./fonts/Roboto-Bold.ttf);
 }
 
 
