--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -220,7 +220,7 @@ main {
                 height: 100%;
                 border-radius: 15px;
 
-                @media (max-width: $md) {
+                @media (max-width: $sm) {
 
                     border-radius: 0 0 20px 20px;
                 }
